--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,8 @@ _ReSharper*/
 .DS_Store
 Thumbs.db
 
+# Environment and configuration files
+.env
 appsettings.Development.json
 appsettings.Local.json
 appsettings.Production.json
