--- a/medicare.csproj
+++ b/medicare.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>3daa132c-c778-4c4e-8666-0645b2f94125</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
